content for the website - changes from aspnet mvc template application with different content hopefully will be a nice prophecies one day

--- a/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
@@ -18,22 +18,27 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>OpenSource Adventure!</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            I love ASP.NET!  
+            <br />
+            This Website is an Opensource Adventure!
+            <br />
+            You can view the code <a href="https://github.com/VadimRasin/MessiahSoftwareSolutions" target="_blank">here</a>
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Join &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Let's work Together!</h2>
+        <p>
+            We are looking for new <a href="/clients">clients</a> and business proposals!
+        </p>
+        <p><a class="btn btn-default" href="/ContactUs">Contact US &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Small Hosting Solutions</h2>
+        <p>
+            The company uses <a href="https://azure.microsoft.com/" target="_blank">microsoft azure</a> and to host web applications and solutions.
+        <p><a class="btn btn-default" href="/ContactUS">Contact US &raquo;</a></p>
     </div>
 </div>
