content changes from the template + disabled the video on the homepage (its annoying) and the makes the text unreadable

--- a/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
@@ -3,18 +3,27 @@
 }
 
 <!-- Inspirational technologies-->
-<section class="section bg-gray-darker text-center">
-    <div class="section-xl bg-vide" data-vide-bg="mp4: video/office-day, poster: video/office-day" data-vide-options="posterType: jpg, position: 0% 50%">
-        <div class="container container-wide">
-            <div class="row row-50 justify-content-md-center">
-                <div class="col-md-10 col-xl-9">
-                    <h1>Inspirational Technologies</h1>
-                    <p class="big">Effective was created with the idea of bringing you multipurpose and flexible IT Solutions. We use various innovative technologies that make your work not only easier but more productive without unnecessary coding.</p><a class="button button-primary" href="about-us.html">learn more</a>
+    <section class="section bg-gray-darker text-center">
+        @* 07.11.19 removing mp4: video/office-day, param so website will look presentable..*@
+        <div class="section-xl bg-vide" data-vide-bg="poster: video/office-day" data-vide-options="loop: false, muted: true, posterType: jpg, position: 0% 50%">
+            <div class="container container-wide">
+                <div class="row row-50 justify-content-md-center">
+                    <div class="col-md-10 col-xl-9">
+                        <h1>Messiah Software Solutions</h1>
+                        <p class="big">
+                            "Messiah Software Solutions" is a private israel small business owned by <a href="http://about.me/vadimrasin/" target="_blank">Vadim Rasin</a>
+                            <br />
+                            The Company / Vadim Rasin builds Web sites and Web applications!
+                            @*Effective was created with the idea of bringing you multipurpose and flexible IT Solutions. We use various innovative technologies that make your work not only easier but more productive without unnecessary coding.*@
+                            <br />
+                            Contact us or view more on our <a href="/projects">projects</a> page!
+                        </p>
+                        <a class="button button-primary" href="about-us.html">learn more</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 <!-- Our Services-->
 <section class="section section-lg bg-default text-center">
