added custom.css to overide design basic settings without going thru all the big chaotic css from templatemonster -- changed the number of employees in the homepage to 1 + made it align to center

--- a/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
@@ -186,111 +186,14 @@
 
 <!-- Our Team-->
 <section class="section section-lg bg-default text-center">
-    <div class="container container-wide">
+    <div class="container container-wide OurTeam">
         <h3>Our Team</h3>
         <hr class="divider divider-default">
         <!-- Owl Carousel-->
-        <div class="owl-carousel owl-carousel-team" data-autoplay="true" data-items="1" data-md-items="2" data-lg-items="3" data-xl-items="4" data-xxl-items="6" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false" data-dots="true">
-            <div class="team-classic">
-                <div class="team-classic-image">
-                    <figure>
-                        <img src="images/team-01-270x270.jpg" alt="" width="270" height="270" />
-                    </figure>
-                    <div class="team-classic-image-caption">
-                        <ul class="list-inline list-team">
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="team-classic-caption">
-                    <h5><a class="team-classic-title" href="about-me.html">Sandra Ferguson</a></h5>
-                    <p class="team-classic-job-position">Senior Manager</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
-                </div>
-            </div>
-            <div class="team-classic">
-                <div class="team-classic-image">
-                    <figure>
-                        <img src="images/team-02-270x270.jpg" alt="" width="270" height="270" />
-                    </figure>
-                    <div class="team-classic-image-caption">
-                        <ul class="list-inline list-team">
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="team-classic-caption">
-                    <h5><a class="team-classic-title" href="about-me.html">Ronald Chen</a></h5>
-                    <p class="team-classic-job-position">Marketer</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
-                </div>
-            </div>
-            <div class="team-classic">
-                <div class="team-classic-image">
-                    <figure>
-                        <img src="images/team-03-270x270.jpg" alt="" width="270" height="270" />
-                    </figure>
-                    <div class="team-classic-image-caption">
-                        <ul class="list-inline list-team">
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="team-classic-caption">
-                    <h5><a class="team-classic-title" href="about-me.html">Frances Watson</a></h5>
-                    <p class="team-classic-job-position">Support Operator</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
-                </div>
-            </div>
-            <div class="team-classic">
-                <div class="team-classic-image">
-                    <figure>
-                        <img src="images/team-04-270x270.jpg" alt="" width="270" height="270" />
-                    </figure>
-                    <div class="team-classic-image-caption">
-                        <ul class="list-inline list-team">
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="team-classic-caption">
-                    <h5><a class="team-classic-title" href="about-me.html">Joe Myers</a></h5>
-                    <p class="team-classic-job-position">Developer</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
-                </div>
-            </div>
-            <div class="team-classic">
-                <div class="team-classic-image">
-                    <figure>
-                        <img src="images/team-05-270x270.jpg" alt="" width="270" height="270" />
-                    </figure>
-                    <div class="team-classic-image-caption">
-                        <ul class="list-inline list-team">
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="team-classic-caption">
-                    <h5><a class="team-classic-title" href="about-me.html">Deborah Stewart</a></h5>
-                    <p class="team-classic-job-position">Manager</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
-                </div>
-            </div>
+        <div class="owl-carousel owl-carousel-team" data-autoplay="true" data-items="1" 
+             data-md-items="2" data-lg-items="3" data-xl-items="4" data-xxl-items="6" 
+             data-stage-padding="0" 
+             data-loop="false" data-margin="30" data-mouse-drag="false" data-dots="true" style="margin:0 auto;">
             <div class="team-classic">
                 <div class="team-classic-image">
                     <figure>
