Changed the primary button display to be with black color (+ hover effect) for accessibility

--- a/MessiahSoftwareSolutions.com/css/custom.css
+++ b/MessiahSoftwareSolutions.com/css/custom.css
@@ -4,3 +4,9 @@
 {
     margin: 0 auto;
 }
+
+
+/* Primary buttons with black text! */
+.button-primary, .button-primary:hover {
+    color: #000;
+}
