--- a/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
@@ -11,14 +11,14 @@
                     <div class="col-md-10 col-xl-9">
                         <h1>Messiah Software Solutions</h1>
                         <p class="big">
-                            "Messiah Software Solutions" is a private israel small business owned by <a href="http://about.me/vadimrasin/" target="_blank">Vadim Rasin</a>
+                            Messiah Software Solutions is a private israel small business owned by <a href="http://about.me/vadimrasin/" target="_blank">Vadim Rasin</a>
                             <br />
-                            The Company / Vadim Rasin builds Web sites and Web applications!
+                            The Company / Vadim Rasin builds Web sites, Web applications for clients and individuals.
                             @*Effective was created with the idea of bringing you multipurpose and flexible IT Solutions. We use various innovative technologies that make your work not only easier but more productive without unnecessary coding.*@
                             <br />
-                            Contact us or view more on our <a href="/projects">projects</a> page!
+                            <a href="/projects">Contact US</a> or view more on our <a href="/projects">projects</a> page!
                         </p>
-                        <a class="button button-primary" href="about-us.html">learn more</a>
+                        <a class="button button-primary" href="about-us.html">learn more about us..</a>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,10 @@
                     <div class="thumbnail-classic-caption unit-body">
                         <h6 class="thumbnail-classic-title">Mobile Apps Development</h6>
                         <hr class="divider divider-default divider-sm" />
-                        <p class="thumbnail-classic-text">At Effective, we work for our customers every day to deliver the best mobile applications for any purposes. We work both with individual and corporate customers.</p>
+                        <p class="thumbnail-classic-text">
+                            @*At Effective, we work for our customers every day to deliver the best mobile applications for any purposes. We work both with individual and corporate customers.*@
+                            Under Construction!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -49,7 +52,10 @@
                     <div class="thumbnail-classic-caption unit-body">
                         <h6 class="thumbnail-classic-title">Website Design</h6>
                         <hr class="divider divider-default divider-sm" />
-                        <p class="thumbnail-classic-text">Our expert team can design a website of any complexity, from a landing page to a corporate multipage website. Everything depends on what you are looking for.</p>
+                        <p class="thumbnail-classic-text">
+                            @*Our expert team can design a website of any complexity, from a landing page to a corporate multipage website. Everything depends on what you are looking for.*@
+                            Under Construction!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -59,7 +65,10 @@
                     <div class="thumbnail-classic-caption unit-body">
                         <h6 class="thumbnail-classic-title">IT Consulting</h6>
                         <hr class="divider divider-default divider-sm" />
-                        <p class="thumbnail-classic-text">Our team is glad to provide you with professional IT consulting services 24/7. We have been helping lots of companies since our establishment.</p>
+                        <p class="thumbnail-classic-text">
+                            @*Our team is glad to provide you with professional IT consulting services 24/7. We have been helping lots of companies since our establishment.*@
+                            Under Construction!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -69,7 +78,10 @@
                     <div class="thumbnail-classic-caption unit-body">
                         <h6 class="thumbnail-classic-title">Internet Marketing</h6>
                         <hr class="divider divider-default divider-sm" />
-                        <p class="thumbnail-classic-text">In the modern world of rapid web development, internet marketing plays a vital role in your company’s promotion. We are happy to assist you with it.</p>
+                        <p class="thumbnail-classic-text">
+                            @*In the modern world of rapid web development, internet marketing plays a vital role in your company’s promotion. We are happy to assist you with it.*@
+                            Under Construction!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -197,21 +209,22 @@
             <div class="team-classic">
                 <div class="team-classic-image">
                     <figure>
-                        <img src="images/team-06-270x270.jpg" alt="" width="270" height="270" />
+                        <img src="images/team-vadimrasin-270x270.jpg" alt="" width="270" height="270" />
                     </figure>
                     <div class="team-classic-image-caption">
                         <ul class="list-inline list-team">
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
+                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" target="_blank" href="https://facebook.com/VadimRasin/"></a></li>
+                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" target="_blank" href="https://twitter.com/hsvdrv/"></a></li>
+                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" target="_blank" href="https://instagram.com/VadimAdamRasin/"></a></li>
+                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" target="_blank" href="https://linkedin.com/in/VadimRasin/"></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-classic-caption">
-                    <h5><a class="team-classic-title" href="about-me.html">Patrick Douglas</a></h5>
-                    <p class="team-classic-job-position">Designer</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
+                    <h5>
+                        <a class="team-classic-title" href="about-me.html">Vadim Rasin</a>
+                    </h5>
+                    <p class="team-classic-job-position">.Net Developer</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
                 </div>
             </div>
         </div><a class="button button-primary" href="about-us.html">view all team</a>
