Misc content changes.. #OurTeam

--- a/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
@@ -11,12 +11,12 @@
                     <div class="col-md-10 col-xl-9">
                         <h1>Messiah Software Solutions</h1>
                         <p class="big">
-                            Messiah Software Solutions is a private israel small business owned by <a href="http://about.me/vadimrasin/" target="_blank">Vadim Rasin</a>
+                            Messiah Software Solutions is a private israel small business owned by <a href="#OurTeam">Vadim Rasin</a>
                             <br />
                             The Company / Vadim Rasin builds Web sites, Web applications for clients and individuals.
                             @*Effective was created with the idea of bringing you multipurpose and flexible IT Solutions. We use various innovative technologies that make your work not only easier but more productive without unnecessary coding.*@
                             <br />
-                            <a href="/projects">Contact US</a> or view more on our <a href="/projects">projects</a> page!
+                            <a href="/projects">Contact us</a> or view more on our <a href="/projects">projects</a> page!
                         </p>
                         <a class="button button-primary" href="about-us.html">learn more about us..</a>
                     </div>
@@ -197,6 +197,7 @@
 </section>
 
 <!-- Our Team-->
+<a name="OurTeam"></a>
 <section class="section section-lg bg-default text-center">
     <div class="container container-wide OurTeam">
         <h3>Our Team</h3>
