--- a/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/Index.cshtml
@@ -233,12 +233,13 @@
 </section>
 
 <!-- Our Advantages-->
+<a name="OurAdvantages"></a>
 <section class="section section-wrap section-wrap-lg section-reverse bg-gray-darker">
     <div class="section-wrap-inner">
         <div class="container container-wide">
             <div class="row row-50 justify-content-md-center justify-content-xl-end">
                 <div class="col-md-12 col-lg-7 col-xl-7 col-xxl-6">
-                    <div class="section-lg">
+                    <div class="section-lg OurAdvantages">
                         <h3>Our Advantages</h3>
                         <div class="divider divider-default"></div>
                         <div class="row row-30">
