added local IIS / folder publish plan + added folders / images to project so it will publish properly + small text change in the master/layout

--- a/MessiahSoftwareSolutions.com/Views/Shared/_Layout.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Shared/_Layout.cshtml
@@ -174,7 +174,7 @@
                     <div class="col-md-6 col-xl-3">
                         <div class="inset-xxl">
                             <h6>About Us</h6>
-                            <p class="text-spacing-sm">We at Effective know how to design and develop a website or app of any complexity. Regardless of what you are looking for, our experts can deliver a solution, which will elevate your business to unbelievable heights.</p>
+                            <p class="text-spacing-sm">We at Messiah Software Solutions know how to design and develop a website or app of any complexity. Regardless of what you are looking for, our experts can deliver a solution, which will elevate your business to unbelievable heights.</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-2">
