--- a/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
@@ -1,19 +1,24 @@
 ﻿@{
     ViewBag.Title = "Under Construction";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<br />
-<br />
+<div>
+
+    <h2>@ViewBag.Title.</h2>
+    <h3>@ViewBag.Message</h3>
+
+    <br />
+    <br />
     Messiah - Software Solutions LTD website will be soon online!
-<br />
-<br />
+    <br />
+    <br />
     Meanwhile the master pushes code / reflects on the brand and on the life.
 
-<br />
-<br />
-<a href="https://facebook.com/vadimrasin">facebook.com/vadimrasin</a>
-<br />
-<br />
-<a href="https://twitter.com/hsvdrv">twitter.com/hsvdrv</a>
+    <br />
+    <br />
+    <a href="https://facebook.com/vadimrasin">facebook.com/vadimrasin</a>
+    <br />
+    <br />
+    <a href="https://twitter.com/hsvdrv">twitter.com/hsvdrv</a>
+
+</div>
