working on disabling the top menu scroll animations for accessibility

--- a/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
@@ -2,23 +2,33 @@
     ViewBag.Title = "Under Construction";
 }
 
-<div>
+    <div>
 
-    <h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+        <h2>@ViewBag.Title.</h2>
+        <h3>@ViewBag.Message</h3>
 
-    <br />
-    <br />
-    Messiah - Software Solutions LTD website will be soon online!
-    <br />
-    <br />
-    Meanwhile the master pushes code / reflects on the brand and on the life.
+        <br />
+        <br />
+        Messiah - Software Solutions LTD website will be soon online!
+        <br />
+        <br />
+        Meanwhile the master pushes code / reflects on the brand and on the life.
 
-    <br />
-    <br />
-    <a href="https://facebook.com/vadimrasin">facebook.com/vadimrasin</a>
-    <br />
-    <br />
-    <a href="https://twitter.com/hsvdrv">twitter.com/hsvdrv</a>
-
-</div>
+        <br />
+        <br />
+        <a href="https://facebook.com/vadimrasin">facebook.com/vadimrasin</a>
+        <br />
+        <br />
+        <a href="https://twitter.com/hsvdrv">twitter.com/hsvdrv</a>
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+        <br /><br />+ lots of text to test scroll<br /><br />
+    </div>
