--- a/MessiahSoftwareSolutions.com/css/style.css
+++ b/MessiahSoftwareSolutions.com/css/style.css
@@ -181,14 +181,14 @@ body {
 * Links
 */
 a {
-    /*color: #1cd8c9;*/
+    /*color: #1cd8c9; old annoying template color*/
     color: #0F4B7F;
     text-decoration: none;
     transition: .25s;
 }
 
     a:hover, a:focus {
-        /*color: #1cd8c9;*/
+        /*color: #1cd8c9; old annoying template color*/
         color: #0F4B7F;
         text-decoration: none;
         outline: none;
@@ -12483,7 +12483,10 @@ html:not(.lt-ie10) .not-animated {
 .rd-navbar-static .rd-navbar-megamenu,
 .rd-navbar-fullwidth .rd-navbar-dropdown,
 .rd-navbar-fullwidth .rd-navbar-megamenu, .rd-navbar-fixed .rd-navbar-nav-wrap, .rd-navbar-fixed .rd-navbar-submenu {
-  transition: 0.35s all cubic-bezier(0.65, 0.05, 0.36, 1); }
+  /*transition: 0.35s all cubic-bezier(0.65, 0.05, 0.36, 1);*/ 
+  /* disabling annoying transition in top menu after scrolls */
+  transition:none !important;
+}
 
 .rd-navbar, .rd-navbar.rd-navbar--is-clone {
   display: none; }
