--- a/MessiahSoftwareSolutions.com/css/custom.css
+++ b/MessiahSoftwareSolutions.com/css/custom.css
@@ -33,3 +33,12 @@
     max-width: 100%;
     /* #ToDo add animation when cursor hovers the our advantages then the teal seperator turns from 100px to 100% width in animation*/
 }
+
+
+.rd-navbar-HeadacheFixed 
+{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    box-shadow: 0 6px 8px rgba(41, 41, 58, 0.17);
+}
