misc changes / title & layout .. going to merge back with the master and create normal branches i had enough with this one..

--- a/MessiahSoftwareSolutions.com/Views/Shared/_Layout.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Shared/_Layout.cshtml
@@ -177,7 +177,7 @@
                                 <button class="rd-search-form-submit mdi mdi-magnify"></button>
                             </form>
                         </div>
-                        <a class="button button-sm button-default-outline" href="contacts.html">request a quote</a>
+                        <a class="button button-sm button-default-outline" href="mailto:info@messiahsolutions.com">request a quote</a>
                     </div>
                 </div>
             </nav>
