--- a/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Under Construction";
+    ViewBag.Title = "Coming Soon! ";
 }
 
-    <div>
+    <div class="UnderConstructionWrapper">
 
-        <h2>@ViewBag.Title.</h2>
-        <h3>@ViewBag.Message</h3>
+        <h2>@ViewBag.Title</h2>
 
         <br />
         <br />
