working on the comming soon page! added infographics from freepik.com and flaticon.com + css rules + content

--- a/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
@@ -1,24 +1,52 @@
 ﻿@{
-    ViewBag.Title = "Coming Soon! ";
+    ViewBag.Title = "Coming Soon!";
 }
 
-    <div class="UnderConstructionWrapper">
+<div class="MobileBGPlaceHolder">
 
-        <h2>@ViewBag.Title</h2>
+</div>
 
-        <br />
-        <br />
-        Messiah - Software Solutions LTD website will be soon online!
-        <br />
-        <br />
-        Meanwhile the master pushes code / reflects on the brand and on the life.
+<div class="UnderConstructionWrapper">
 
-        <br />
-        <br />
-        <a href="https://facebook.com/vadimrasin">facebook.com/vadimrasin</a>
-        <br />
-        <br />
-        <a href="https://twitter.com/hsvdrv">twitter.com/hsvdrv</a>
+    <h2>@ViewBag.Title</h2>
+
+    <br />
+    "Messiah Software Solutions LTD" is an israel company privately owned by <a href="about.me/vadimrasin" target="_blank">Vadim Rasin</a>.
+    <br />
+    <br />
+    We are looking for new cool projects! <br />
+    We want to make a better world! <br />
+    Do you want to work with us? Give us a new project?  <br />
+    Need a little assistance or counseling?  <br />
+    But <span class="HeavyText">please</span>! Don't leave us after you are <span class="HeavyText">happy</span> and <span class="HeavyText">satisfied</span> from the <span class="HeavyText">
+        answered prophecies..
+    </span>
+    <br />
+    <br />
+    Direct links of the owner for questions/offers: <br />
+    <span>
+        <img src="~/images/ComingSoon/FaceBook.png" border="0" height="26" width="26"
+             alt="Facebook link of the owner vadim rasin" title="Facebook link of the owner vadim rasin" />
+        <a href="https://facebook.com/vadimrasin" target="_blank">facebook.com/vadimrasin</a>
+    </span>
+    <br />
+
+    <span>
+        <img src="~/images/ComingSoon/Twitter.png" border="0" height="26" width="26"
+             alt="Twitter link of the owner vadim rasin" title="Twitter link of the owner vadim rasin" />
+        <a href="https://twitter.com/hsvdrv" target="_blank">twitter.com/hsvdrv</a>
+    </span>
+
+    <br />
+    <span>
+        <img src="~/images/ComingSoon/linkedin.png" border="0" height="26" width="26"
+             alt="Linkedin of the owner vadim rasin" title="Linkedin of the owner vadim rasin" />
+        <a href="https://twitter.com/hsvdrv" target="_blank">linkedin.com/in/vadimrasin</a>
+    </span>
+
+
+    <br /><br />
+    @*<br /><br />+ lots of text to test scroll<br /><br />
         <br /><br />+ lots of text to test scroll<br /><br />
         <br /><br />+ lots of text to test scroll<br /><br />
         <br /><br />+ lots of text to test scroll<br /><br />
@@ -28,6 +56,17 @@
         <br /><br />+ lots of text to test scroll<br /><br />
         <br /><br />+ lots of text to test scroll<br /><br />
         <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-    </div>
+        <br /><br />+ lots of text to test scroll<br /><br />*@
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
