--- a/MessiahSoftwareSolutions.com/css/style.css
+++ b/MessiahSoftwareSolutions.com/css/style.css
@@ -161,14 +161,16 @@ html p a:hover {
 * Body
 */
 body {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 1.6;
-  color: #838386;
-  background-color: #fff;
-  -webkit-text-size-adjust: none;
-  -webkit-font-smoothing: subpixel-antialiased; }
+    /*font-family: "Lato", Helvetica, Arial, sans-serif;*/
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 1.6;
+    color: #838386;
+    background-color: #fff;
+    -webkit-text-size-adjust: none;
+    -webkit-font-smoothing: subpixel-antialiased;
+}
   @media (min-width: 992px) {
     body {
       font-size: 16px;
@@ -255,10 +257,12 @@ h1,
 
 h2,
 .heading-2 {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-size: 28px;
-  line-height: 1.2;
-  text-transform: none; }
+    /*font-family: "Lato", Helvetica, Arial, sans-serif;*/
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 28px;
+    line-height: 1.2;
+    text-transform: none;
+}
   @media (min-width: 768px) {
     h2,
     .heading-2 {
